--- a/package.json
+++ b/package.json
@@ -8,8 +8,26 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
+    "@apollo/react-ssr": "^3.1.5",
+    "@nexus/schema": "^0.13.1",
+    "@prisma/client": "^2.0.0-beta.5",
+    "apollo-boost": "^0.4.9",
+    "apollo-link-schema": "^1.2.5",
+    "apollo-link-state": "^0.4.2",
+    "apollo-server-micro": "^2.13.1",
+    "graphql": "^15.0.0",
     "next": "9.4.2",
+    "nexus-prisma": "^0.13.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@prisma/cli": "^2.0.0-beta.5",
+    "@types/node": "^14.0.5",
+    "@types/react": "^16.9.35",
+    "dotenv": "^8.2.0",
+    "ts-node": "^8.10.1",
+    "typescript": "^3.9.3"
   }
 }
