--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
     "@apollo/react-ssr": "^3.1.5",
+    "@graphql-tools/graphql-file-loader": "^6.0.1",
+    "@graphql-tools/load": "^6.0.1",
     "@nexus/schema": "^0.13.1",
     "@prisma/client": "^2.0.0-beta.5",
     "apollo-boost": "^0.4.9",
